# meazure

./: .editorconfig  .gitignore  Building.md  Building.txt  CMakeLists.txt  License.txt  README.md  Readme.txt  cmake-lint-config.py
.github/: FUNDING.yml
apidocs/html/: AdvancedPrefs_8h.html  AdvancedPrefs_8h__dep__incl.map  AdvancedPrefs_8h__dep__incl.md5  AdvancedPrefs_8h__incl.map  AdvancedPrefs_8h__incl.md5  AdvancedPrefs_8h_source.html  AngleTool_8h.html  AngleTool_8h__dep__incl.map  AngleTool_8h__dep__incl.md5  AngleTool_8h__incl.map  AngleTool_8h__incl.md5  AngleTool_8h_source.html  AppFrame_8h.html  AppFrame_8h__incl.map  AppFrame_8h__incl.md5  AppFrame_8h_source.html  AppView_8h.html  AppView_8h__dep__incl.map  AppView_8h__dep__incl.md5  AppView_8h__incl.map  AppView_8h__incl.md5  AppView_8h_source.html  App_8h.html  App_8h__incl.map  App_8h__incl.md5  App_8h_source.html  Assert_8h.html  Assert_8h__dep__incl.map  Assert_8h__dep__incl.md5  Assert_8h__incl.md5  Assert_8h_source.html  CalibrationPrefs_8h.html  CalibrationPrefs_8h__dep__incl.map  CalibrationPrefs_8h__dep__incl.md5  CalibrationPrefs_8h__incl.map  CalibrationPrefs_8h__incl.md5  CalibrationPrefs_8h_source.html  ChildView_8h.html  ChildView_8h__dep__incl.map  ChildView_8h__dep__incl.md5  (+1445 more)
src/: CMakeLists.txt
src/expat/: CMakeLists.txt  libexpat.def  xmlparse.c  xmltok_impl.c
src/help/: CMakeLists.txt  Guide.htm  Help.vcproj  Meazure.css  Meazure.hhc  Meazure.hhk  Meazure.hhp  Meazure.js  hhc.cmake
src/help/Graphics/: CoordinateSystems.vsd  Sections.psd  Sections.xcf
src/help/Templates/: TopicTemplate.htm
src/help/Topics/: AdvancedPrefs.htm  AlwaysVisible.htm  AngleTool.htm  Calibration.htm  CaptureTasks.htm  ChangeCoordTask.htm  CircleTool.htm  ColorTask.htm  Contents.htm  Crosshair.htm  CursorTool.htm  CustomLayout.htm  CustomUnits.htm  CustomizationTasks.htm  HideDataWinTask.htm  (+42 more)
src/hooks/: CMakeLists.txt  hooks.cpp  hooks.exp  hooks.h  pch.h  stdafx.cpp  stdafx.h
src/meazure/: AdvancedPrefs.cpp  AdvancedPrefs.h  AngleTool.cpp  AngleTool.h  App.cpp  App.h  AppFrame.cpp  AppFrame.h  Assert.h  CMakeLists.txt  CalibrationPrefs.cpp  CalibrationPrefs.h  ChildView.cpp  ChildView.h  Circle.cpp  Circle.h  CircleTool.cpp  CircleTool.h  ColorDialog.cpp  ColorDialog.h  Colors.cpp  Colors.h  CommandLineInfo.cpp  CommandLineInfo.h  CrossHair.cpp  CrossHair.h  CursorTool.cpp  CursorTool.h  CustomUnitsPrefs.cpp  CustomUnitsPrefs.h  DataDisplay.cpp  DataDisplay.h  DataWin.cpp  DataWin.h  FileProfile.cpp  FileProfile.h  GUID.cpp  GUID.h  Graphic.cpp  Graphic.h  (+106 more)
src/meazure/graphics/: Circle.cpp  Circle.h  Colors.cpp  Colors.h  CrossHair.cpp  CrossHair.h  Graphic.cpp  Graphic.h  Line.cpp  Line.h  Plotter.h  Rectangle.cpp  Rectangle.h  Ruler.cpp  Ruler.h
src/meazure/position/: Position.cpp  Position.h  PositionCollection.cpp  PositionCollection.h  PositionDesktop.cpp  PositionDesktop.h  PositionLogDlg.cpp  PositionLogMgr.cpp  PositionLogMgr.h  PositionLogObserver.h  PositionLogWriter.cpp  PositionLogWriter.h  PositionProvider.h  PositionSaveDlg.cpp  PositionSaveDlg.h  PositionScreen.cpp  PositionScreen.h
src/meazure/prefs/: AdvancedPrefs.cpp  AdvancedPrefs.h  CalibrationPrefs.cpp  CalibrationPrefs.h  CustomUnitsPrefs.cpp  CustomUnitsPrefs.h  PrecisionPrefs.cpp  PrecisionPrefs.h  Preferences.cpp  Preferences.h  RulerPrefs.cpp  RulerPrefs.h  ToolsPrefs.cpp  ToolsPrefs.h
src/meazure/profile/: FileProfile.cpp  FileProfile.h  Profile.cpp  Profile.h  ProfileMgr.cpp  ProfileMgr.h  RegistryProfile.cpp  RegistryProfile.h
src/meazure/res/: Hand.cur  Meazure.rc2
src/meazure/tools/: AngleTool.cpp  AngleTool.h  CircleTool.cpp  CircleTool.h  CursorTool.cpp  CursorTool.h  GridTool.cpp  GridTool.h  LineTool.cpp  LineTool.h  OriginTool.cpp  OriginTool.h  PointTool.cpp  PointTool.h  RadioTool.cpp  RadioTool.h  RectTool.cpp  RectTool.h  RulerTool.cpp  RulerTool.h  ScreenTool.cpp  ScreenTool.h  Tool.cpp  Tool.h  ToolMgr.cpp  ToolMgr.h  WindowTool.cpp  WindowTool.h
src/meazure/ui/: AppFrame.cpp  AppFrame.h  AppView.cpp  AppView.h  ColorDialog.cpp  ColorDialog.h  DataDisplay.cpp  DataDisplay.h  DataFieldId.h  DataWin.cpp  DataWin.h  ImageButton.cpp  ImageButton.h  Label.cpp  Label.h  LayeredWindows.h  Layout.cpp  Layout.h  Magnifier.cpp  Magnifier.h  NumberField.cpp  NumberField.h  RulerSlider.cpp  RulerSlider.h  ScreenMgr.cpp  ScreenMgr.h  ScreenProvider.h  StatusBar.cpp  StatusBar.h  Swatch.cpp  TextField.cpp  TextField.h  Themes.h
src/meazure/units/: Units.cpp  Units.h  UnitsLabels.cpp  UnitsLabels.h  UnitsMgr.cpp  UnitsMgr.h  UnitsProvider.h
src/meazure/utilities/: GUID.cpp  GUID.h  Geometry.h  NumericUtils.h  Registry.cpp  Registry.h  RegistryProvider.h  Singleton.h  StringUtils.cpp  StringUtils.h  TimeStamp.cpp  TimeStamp.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  XMLParser.cpp  XMLParser.h  exval.cpp
src/meazure/xml/: XMLParser.cpp  XMLParser.h  XMLWriter.cpp  XMLWriter.h
src/test/: CMakeLists.txt
src/test/meazure/: CMakeLists.txt  ColorsTest.cpp  CommandLineInfoTest.cpp  FileProfileTest.cpp  GUIDTest.cpp  GeometryTest.cpp  GlobalFixture.h  NumericUtilsTest.cpp  PlotterTest.cpp  PositionCollectionTest.cpp  PositionDesktopTest.cpp  PositionLogWriterTest.cpp  PositionScreenTest.cpp  PositionTest.cpp  RegistryProfileTest.cpp  SingletonTest.cpp  StringUtilsTest.cpp  Test.aps  Test.rc  TimeStampTest.cpp  UnitsTest.cpp  UtilsTest.cpp  VersionInfoTest.cpp  XMLParserTest.cpp  XMLWriterTest.cpp  pch.cpp  pch.h  stdafx.h
src/test/meazure/mocks/: MockPositionDesktopRefCounter.h  MockPositionLogWriter.h  MockPositionProvider.h  MockRegistry.h  MockScreenProvider.h  MockUnitsProvider.h
support/: CMakeLists.txt
support/conan/: README.md  cthing-conan.cmake
support/doxygen/: CMakeLists.txt  Footer.html  MainPage.txt  Meazure.cfg
support/dtd/: PositionLog1.dtd
support/installer/: CMakeLists.txt  Meazure.iss  Meazure.iss.in
support/profiles/: 1024x768.mea  1280x1024.mea  1920x1080.mea  640x480.mea  800x600.mea  NTSC.mea  PAL.mea  SVGA.mea  SXGA.mea  VGA.mea  XGA.mea
support/qa/: TestPlan.doc  TestPlan.md
(+1 files in other folders)
